[DSC-2153] Allow to use the DOIOrganiser over large queue with automatic pagination
(cherry picked from commit 1fe977655998a7c09e5b88f7734b5302f1581d37)
(cherry picked from commit 187da4f0414578b7a54b965beef487a8f2695d54)